--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '2'
+version: '3.9'
 
 services:
   postgresql:
@@ -69,38 +69,16 @@ services:
       - "4040-4080:4040-4080"
     volumes:
       - ./notebooks:/home/jovyan/work/notebooks/
-  pg:
-    image: docker.io/bitnami/postgresql:11
-    env_file:
-      - database.env
+  mssql:
+    image: mcr.microsoft.com/mssql/server:2019-latest
     ports:
-      - '5433:5432'
-    expose:
-      - '5433'
+      - 1433:1433
     volumes:
-      - 'pg_data:/bitnami/postgresql'
+      - mssql_data:/bitnami
+      - ~/apps/mssql/data:/var/lib/mssqlql/data
     environment:
-      - 'ALLOW_EMPTY_PASSWORD=yes'
-  mysql:
-    image: mysql:5.7
-    restart: always
-    environment:
-      MYSQL_DATABASE: 'db'
-      # So you don't have to use root, but you can if you like
-      MYSQL_USER: 'user'
-      # You can use whatever password you like
-      MYSQL_PASSWORD: 'password'
-      # Password for root access
-      MYSQL_ROOT_PASSWORD: 'password'
-    ports:
-      # <Port exposed> : < MySQL Port running inside container>
-      - '3306:3306'
-    expose:
-      # Opens port 3306 on the container
-      - '3306'
-      # Where our data will be persisted
-    volumes:
-      - my-db:/var/lib/mysql
+      - ACCEPT_EULA=Y
+      - SA_PASSWORD=mssql1Ipw
 volumes:
   airflow_scheduler_data:
     driver: local
@@ -112,9 +90,7 @@ volumes:
     driver: local
   redis_data:
     driver: local
-  pg_data:
-    driver: local
-  my-db:
+  mssql_data:
     driver: local
   logs_volume:
     driver: local
